[gd_scene load_steps=2 format=3 uid="uid://efajhc18h5jc"]

[ext_resource type="Script" uid="uid://bk8ejope1fr2c" path="res://src/menu/menu_main.gd" id="1_gnm0h"]

[node name="Menu_Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
script = ExtResource("1_gnm0h")
metadata/_custom_type_script = "uid://cu6okrt2q3dry"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -42.0
offset_right = 49.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Start" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button_Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button_Quit" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
text = "Sub-way"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Sub-way"

[connection signal="pressed" from="Panel/VBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_Settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
